# geodesics

./: .gitignore  CMakeLists.txt  README.md
meshes/: hexagon_lvl0.off  hexagon_lvl1.off  hexagon_lvl2.off  hexagon_lvl3.off  hexagon_lvl4.off  hexagon_lvl5.off  hexagon_lvl6.off
src/: CMakeLists.txt  GeodesicAlgorithms.cpp  GeodesicAlgorithms.h  HeatMethod.cpp  func.cpp  func.h  main.cpp
test/: main.cpp  tests.cpp
